# discovery

./: 404.html  Cargo.toml  index.html  print.html
f3discovery/: 404.html  explore.html  index.html  print.html  searchindex.js  searchindex.json
f3discovery/01-background/: index.html
f3discovery/02-requirements/: index.html
f3discovery/03-setup/: index.html  linux.html  macos.html  verify.html  windows.html
f3discovery/04-meet-your-hardware/: index.html
f3discovery/05-led-roulette/: build-it.html  debug-it.html  flash-it.html  index.html  my-solution.html  the-challenge.html  the-led-and-delay-abstractions.html
f3discovery/06-hello-world/: index.html  panic.html
f3discovery/07-registers/: bad-address.html  index.html  optimization.html  rtrm.html  spooky-action-at-a-distance.html  type-safe-manipulation.html
f3discovery/08-leds-again/: configuration.html  index.html  power.html  the-solution.html
f3discovery/09-clocks-and-timers/: busy-waiting.html  for-loop-delays.html  index.html  initialization.html  nop.html  one-shot-timer.html  putting-it-all-together.html
f3discovery/10-serial-communication/: index.html  loopbacks.html  nix-tooling.html  windows-tooling.html
f3discovery/11-usart/: buffer-overrun.html  echo-server.html  index.html  my-solution.html  receive-a-single-byte.html  reverse-a-string.html  send-a-single-byte.html  send-a-string.html  uprintln.html
f3discovery/12-bluetooth-setup/: at-commands.html  index.html  linux.html  loopback.html
f3discovery/13-serial-over-bluetooth/: index.html
microbit/: 404.html  explore.html  index.html  print.html  searchindex.js  searchindex.json
src/issue-246-interrupt-vectors/: Cargo.toml
src/issue-246-interrupt-vectors/src/: main.rs
(+76 files in other folders)
