[workspace]
members = [
  "src/05-led-roulette",
  "src/06-hello-world",
  "src/07-registers",
  "src/08-leds-again",
  "src/09-clocks-and-timers",
  "src/11-usart",
  "src/14-i2c",
  "src/15-led-compass",
  "src/16-punch-o-meter",
  "src/issue-246-interrupt-vectors",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
